[project]
name = "blux"
version = "0.2"
authors = [
    { name="Hansimov" },
]
description = "Common utils for multi repos of blbl.top."
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [ "tclogger" ]

[project.urls]
Homepage = "https://github.com/Hansimov/blux"
Issues = "https://github.com/Hansimov/blux/issues"
